src/test/deca/syntax/valid/ClassDeclBodyVarPublic.deca
//Test de la visibilité public pour une field

class Thing {
    int i;
}
