src/test/deca/syntax/invalid/ClassMethodeSansNom.deca
//méthode dans une classe sans nom

class Thing {
    
    int {
    }

}
